adicionei um paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -8,8 +8,6 @@
 <body>
     
     <h1>Olá,Mundo!</h1>
- <hr>   
-    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.
-
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas ullam alias cum, laboriosam consectetur possimus. At quod aut iusto commodi voluptas quo modi eaque repellat obcaecati aliquid dolor, fugit perspiciatis?</p>
     </p>
 </html>
